--- a/src/Aco228.GoogleServices/Aco228.GoogleServices.csproj
+++ b/src/Aco228.GoogleServices/Aco228.GoogleServices.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
       <PackageReference Include="Google.Cloud.Storage.V1" Version="4.14.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.2" />
     </ItemGroup>
 
     <ItemGroup>
